updated alpha uikit theme for uikit 2.18

--- a/themes/alpha/less/uikit/icon.less
+++ b/themes/alpha/less/uikit/icon.less
@@ -9,6 +9,8 @@
 
 @icon-font-path:                                "../../../vendor/assets/uikit/fonts";
 
+@icon-hover-color:                              @global-muted-color;
+@icon-hover-hover-color:                        @global-color;
 
 @icon-button-width:                             50px;
 @icon-button-height:                            @icon-button-width;
@@ -22,6 +24,14 @@
 
 @icon-button-active-background:                 @global-primary-active-background;
 @icon-button-active-color:                      @global-contrast-color;
+
+
+// Modifier: `uk-icon-hover`
+// ========================================================================
+
+.hook-icon-hover() {}
+
+.hook-icon-hover-hover() {}
 
 
 // Modifier: `uk-icon-button`
