--- a/themes/alpha/less/uikit/text.less
+++ b/themes/alpha/less/uikit/text.less
@@ -17,6 +17,7 @@
 @text-success-color:                            #71bd6a;
 @text-warning-color:                            #ff9a2e;
 @text-danger-color:                             #e95555;
+@text-contrast-color:                           @global-contrast-color;
 
 
 // Miscellaneous
