--- a/themes/alpha/less/uikit/uikit.less
+++ b/themes/alpha/less/uikit/uikit.less
@@ -3,21 +3,19 @@
 
 @import "../../../../vendor/assets/uikit/less/uikit.less";
 
-// Layout
-@import "../../../../vendor/assets/uikit/less/components/flex.less";
-@import "../../../../vendor/assets/uikit/less/components/cover.less";
-
-// Navs
+// Components: Navs
 @import "../../../../vendor/assets/uikit/less/components/dotnav.less";
 @import "../../../../vendor/assets/uikit/less/components/slidenav.less";
 
 // Components: Common
-@import "../../../../vendor/assets/uikit/less/components/caption.less";
 @import "../../../../vendor/assets/uikit/less/components/form-password.less";
+@import "../../../../vendor/assets/uikit/less/components/progress.less";
 
 // Components: JavaScript
 @import "../../../../vendor/assets/uikit/less/components/slideshow.less";
+@import "../../../../vendor/assets/uikit/less/components/accordion.less";
 @import "../../../../vendor/assets/uikit/less/components/search.less";
+@import "../../../../vendor/assets/uikit/less/components/tooltip.less";
 
 
 // Theme
@@ -74,8 +72,8 @@
 @import "slidenav.less";
 
 // Components: Common
-@import "caption.less";
 @import "form-password.less";
 
 // Components: JavaScript
+@import "accordion.less";
 @import "search.less";
