--- a/themes/alpha/less/uikit/overlay.less
+++ b/themes/alpha/less/uikit/overlay.less
@@ -7,33 +7,31 @@
 // Variables
 // ========================================================================
 
-@overlay-area-background:                       rgba(255,255,255,0.95);
+@overlay-panel-color:                           @global-contrast-color;
 
-@overlay-area-icon-color:                       @global-muted-color;
+@overlay-panel-background:                      rgba(255,255,255,0.95);
 
-@overlay-area-content-color:                    @global-color;
-
-@overlay-caption-padding:                       @global-margin;
-@overlay-caption-color:                         @global-contrast-color;
+@overlay-icon-color:                            @global-muted-color;
 
 
-// Sub-object `uk-overlay-area`
+// Sub-object `uk-overlay-panel`
 // ========================================================================
 
-.hook-overlay-area() {}
-.hook-overlay-area-icon() {}
+.hook-overlay-panel() {}
 
 
-// Sub-object `uk-overlay-area-content`
+// Sub-object `uk-overlay-background`
 // ========================================================================
 
-.hook-overlay-area-content() {}
+.hook-overlay-background() {
+    color: @global-color;
+}
 
 
-// Sub-object `uk-overlay-caption`
+// Sub-object `uk-overlay-icon`
 // ========================================================================
 
-.hook-overlay-caption() {}
+.hook-overlay-icon() {}
 
 
 // Miscellaneous
