Tada! New admin theme :-)

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -151,7 +151,7 @@
 /* Sub-modifier `pk-table-selected`
 ========================================================================== */
 
-.pk-table-selected { background: @global-hover-background; }
+.pk-table-selected { background: #fff; }
 
 
 /* Sub-modifier `pk-table-indent`
@@ -320,7 +320,7 @@
 
 .pk-nestable-item:hover > a,
 .pk-nestable-list-dragged .pk-nestable-item > a  {
-    background: @global-hover-background;
+    background: #fff;
     color: @global-color;
 }
 
