--- a/extensions/system/modules/theme/less/uikit/alert.less
+++ b/extensions/system/modules/theme/less/uikit/alert.less
@@ -10,7 +10,7 @@
 @alert-margin-vertical:                         @global-margin;
 
 @alert-background:                              #e1f2fb;
-@alert-color:                                   #37a5e4;
+@alert-color:                                   #4091D2;
 
 @alert-success-background:                      #ecf7e9;
 @alert-success-color:                           #80c96d;
@@ -19,7 +19,7 @@
 @alert-warning-color:                           #ff9a2e;
 
 @alert-danger-background:                       #fde7e7;
-@alert-danger-color:                            #f0615b;
+@alert-danger-color:                            #F05D54;
 
 
 // Component
