--- a/extensions/system/modules/theme/less/uikit/dropdown.less
+++ b/extensions/system/modules/theme/less/uikit/dropdown.less
@@ -8,14 +8,13 @@
 // ========================================================================
 
 @dropdown-z-index:                              @global-z-index + 20;
-@dropdown-padding:                              20px;
 @dropdown-background:                           #fff;
 @dropdown-color:                                @global-color;
 @dropdown-divider-border:                       @global-border;
 
 @dropdown-navbar-margin:                        5px;
-@dropdown-navbar-background:                    @global-navbar-background;
-@dropdown-navbar-color:                         @global-navbar-color;
+@dropdown-navbar-background:                    #fff;
+@dropdown-navbar-color:                         @global-color;
 @dropdown-navbar-animation:                     uk-fade;
 
 //
