--- a/extensions/system/modules/theme/less/uikit/form.less
+++ b/extensions/system/modules/theme/less/uikit/form.less
@@ -9,15 +9,15 @@
 
 @form-height:                                   @global-height;
 @form-border:                                   @global-border;
-@form-background:                               @global-background;
+@form-background:                               #fff;
 @form-color:                                    @global-color;
 
 @form-focus-border:                             @global-primary-background;
-@form-focus-background:                         @global-background;
+@form-focus-background:                         #fff;
 @form-focus-color:                              @global-color;
 
 @form-disabled-border:                          @global-border;
-@form-disabled-background:                      #fafafa;
+@form-disabled-background:                      @global-background;
 @form-disabled-color:                           @global-muted-color;
 
 @form-placeholder-color:                        @global-muted-color;
@@ -34,11 +34,11 @@
 @form-large-font-size:                          round((@global-font-size * 1.14)); // 16px / 18px
 
 @form-danger-border:                            @global-danger-background;
-@form-danger-background:                        @global-background;
+@form-danger-background:                        #fff;
 @form-danger-color:                             @global-color;
 
 @form-success-border:                           @global-success-background;
-@form-success-background:                       @global-background;
+@form-success-background:                       #fff;
 @form-success-color:                            @global-color;
 
 @form-blank-border:                             @global-border;
