--- a/extensions/system/modules/theme/less/uikit/notify.less
+++ b/extensions/system/modules/theme/less/uikit/notify.less
@@ -17,7 +17,7 @@
 @notify-message-line-height:                    round((@notify-message-font-size * 1.37)); // 22px
 
 @notify-message-primary-background:             fade(#e1f2fb, 90%);
-@notify-message-primary-color:                  #37a5e4;
+@notify-message-primary-color:                  #4091D2;
 
 @notify-message-success-background:             fade(#ecf7e9, 90%);
 @notify-message-success-color:                  #80c96d;
@@ -26,7 +26,7 @@
 @notify-message-warning-color:                  #ff9a2e;
 
 @notify-message-danger-background:              fade(#fde7e7, 90%);
-@notify-message-danger-color:                   #f0615b;
+@notify-message-danger-color:                   #F05D54;
 
 
 // Component
