--- a/extensions/system/modules/theme/less/uikit/variables.less
+++ b/extensions/system/modules/theme/less/uikit/variables.less
@@ -11,11 +11,11 @@
 // Text
 //
 
-@global-color:                                  #444;
-@global-muted-color:                            #999;
+@global-color:                                  #666;
+@global-muted-color:                            #aaa;
 
-@global-link-color:                             #37a5e5;
-@global-link-hover-color:                       #1889c7;
+@global-link-color:                             #4091D2;
+@global-link-hover-color:                       #4587BE;
 
 @global-contrast-color:                         #fff;
 
@@ -26,18 +26,18 @@
 // Backgrounds & Borders
 //
 
-@global-background:                             #fff;
+@global-background:                             #fafafa;
 @global-border:                                 #e5e5e5;
 
-@global-border-radius:                          2px;
+@global-border-radius:                          3px;
 
-@global-default-background:                     #f5f5f5;
-@global-default-hover-background:               #fafafa;
-@global-default-active-background:              #eee;
+@global-default-background:                     #eee;
+@global-default-hover-background:               #e5e5e5;
+@global-default-active-background:              #ddd;
 
-@global-primary-background:                     #37a5e4;
-@global-primary-hover-background:               #2495d6;
-@global-primary-active-background:              #1889c6;
+@global-primary-background:                     #489be0;
+@global-primary-hover-background:               #3e91d7;
+@global-primary-active-background:              #3589cf;
 
 @global-success-background:                     #80c96d;
 @global-success-hover-background:               #6dbc58;
@@ -45,15 +45,9 @@
 
 @global-danger-background:                      #f0615b;
 @global-danger-hover-background:                #e54f49;
-@global-danger-active-background:               #e4463a;
+@global-danger-active-background:               #da443e;
 
-@global-warning-background:                     #ff9a2e;
-
-@global-hover-background:                       #ffd;
-
-@global-navbar-background:						#fafafa;
-@global-navbar-color:							#999;
-@global-navbar-hover-color:						#444;
+@global-warning-background:                     #FFB24E;
 
 //
 // Spacings
