--- a/extensions/system/modules/theme/less/theme.less
+++ b/extensions/system/modules/theme/less/theme.less
@@ -17,25 +17,33 @@ html { overflow-y: scroll; }
 
 .tm-navbar {
     margin-bottom: 50px;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid darken(@navbar-background, 5%);
     background: @navbar-background;
+    box-shadow: 0 1px 3px #ccc;
 }
-
-.tm-navbar-margin { margin-bottom: 110px; }
 
 .tm-navbar .uk-navbar > .uk-navbar-content { padding-left: 10px; }
 .tm-navbar .uk-navbar-flip > .uk-navbar-content { padding-right: 10px; }
 
 
-/* Logo
- ========================================================================== */
-
-.tm-logo { opacity: 0.8; }
-.tm-logo:hover { opacity: 1; }
-
-
 /* Dropdown
  ========================================================================== */
+
+/*
+ *
+ */
+
+[data-uk-dropdown*='click'] { cursor: pointer; }
+
+/*
+ * Navbar Dropdown Toggle
+ */
+
+
+
+/*
+ * Dropdown with Sortable Icons
+ */
 
 .tm-dropdown { width: 350px; }
 
@@ -61,28 +69,8 @@ html { overflow-y: scroll; }
 /* Option toolbar
 ========================================================================== */
 
-/*
- * 1. Prevent flashing on mobiles when switching from fixed to absolute
- */
 .tm-toolbar {
-    position: absolute;
-    top: 61px;
-    left: 0;
-    z-index: @global-z-index - 10;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 15px 0;
     border-bottom: 1px solid #e5e5e5;
-    background: #fff;
-    /* 1 */
-    -webkit-transform: translate3d(0,0,0);
-}
-
-@media (max-width: @breakpoint-small-max) {
-
-    .tm-toolbar { padding: 10px 0; }
-
 }
 
 
