--- a/extensions/system/modules/theme/less/uikit/article.less
+++ b/extensions/system/modules/theme/less/uikit/article.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@article-margin-top:                            @global-margin-large;
+@article-margin-top:                            50px;
 
 @article-title-font-size:                       round((@global-font-size * 2.6)); // 36px / 42px
 @article-title-line-height:                     round((@article-title-font-size * 1.154)); // 42px / 48px
@@ -18,8 +18,9 @@
 @article-meta-color:                            @global-muted-color;
 
 @article-lead-color:                            @global-color;
-@article-lead-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
-@article-lead-line-height:                      round((@article-lead-font-size * 1.32)); // 24px / 26px
+@article-lead-font-size:                        round((@global-font-size * 1.4)); // 20px / 22px
+@article-lead-line-height:                      round((@article-lead-font-size * 1.28)); // 26px / 28px
+@article-lead-font-weight:                      300;
 
 @article-divider-margin:                        @global-margin-large;
 @article-divider-border:                        @global-border;
@@ -40,7 +41,16 @@
 // Sub-object `uk-article-meta`
 // ========================================================================
 
-.hook-article-meta() {}
+.hook-article-meta() {
+
+    a { color: @article-meta-color; }
+
+    a:hover {
+        color: @global-link-hover-color;
+        text-decoration: none;
+    }
+
+}
 
 
 // Sub-object `uk-article-lead`
