--- a/extensions/system/modules/theme/less/uikit/base.less
+++ b/extensions/system/modules/theme/less/uikit/base.less
@@ -17,9 +17,9 @@
 @base-link-hover-color:                         @global-link-hover-color;
 @base-link-hover-text-decoration:               none;
 @base-em-color:                                 #f0615c;
-@base-ins-background:                           @global-hover-background;
+@base-ins-background:                           #ffd;
 @base-ins-color:                                @global-color;
-@base-mark-background:                          @global-hover-background;
+@base-mark-background:                          #ffd;
 @base-mark-color:                               @global-color;
 
 @base-margin-vertical:                          @global-margin;
@@ -44,7 +44,6 @@
 @base-hr-border:                                @global-border;
 
 @base-blockquote-border:                        @global-border;
-@base-blockquote-small-color:                   @global-muted-color;
 @base-blockquote-font-size:                     round((@global-font-size * 1.14)); // 16px / 18px
 @base-blockquote-line-height:                   round((@base-blockquote-font-size * 1.36)); // 22px / 24px
 
@@ -75,7 +74,7 @@
 // ========================================================================
 
 .hook-base-code() {
-    padding: 0 4px;
+    padding: 2px 4px;
     border: 1px solid @base-code-border;
     border-radius: 3px;
     background: @base-code-background;
