--- a/extensions/system/modules/theme/less/uikit/navbar.less
+++ b/extensions/system/modules/theme/less/uikit/navbar.less
@@ -7,30 +7,31 @@
 // Variables
 // ========================================================================
 
-@navbar-background:                             @global-navbar-background;
-@navbar-color:                                  @global-navbar-color;
-@navbar-link-color:                             @global-navbar-color;
-@navbar-link-hover-color:                       @global-navbar-hover-color;
+@navbar-background:                             #3a94e0;
+@navbar-color:                                  @global-contrast-color;
+@navbar-link-color:                             rgba(255,255,255,0.6);
+@navbar-link-hover-color:                       @global-contrast-color;
 
-@navbar-nav-height:                             60px;
+@navbar-nav-height:                             64px;
 @navbar-nav-line-height:                        @navbar-nav-height;
-@navbar-nav-color:                              @global-navbar-color;
+@navbar-nav-color:                              rgba(255,255,255,0.6);
 @navbar-nav-font-size:                          @global-font-size;
+@navbar-nav-font-weight:                        300;
 @navbar-nav-font-family:                        "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@navbar-nav-hover-background:                   @global-navbar-background;
-@navbar-nav-hover-color:                        @global-navbar-hover-color;
-@navbar-nav-onclick-background:                 @global-navbar-background;
-@navbar-nav-onclick-color:                      @global-navbar-hover-color;
-@navbar-nav-active-background:                  @global-navbar-background;
-@navbar-nav-active-color:                       @global-navbar-hover-color;
+@navbar-nav-hover-background:                   #3a94e0;
+@navbar-nav-hover-color:                        @global-contrast-color;
+@navbar-nav-onclick-background:                 #3a94e0;
+@navbar-nav-onclick-color:                      @global-contrast-color;
+@navbar-nav-active-background:                  #3a94e0;
+@navbar-nav-active-color:                       @global-contrast-color;
 
-@navbar-brand-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
-@navbar-brand-color:                            @global-navbar-color;
-@navbar-brand-hover-color:                      @global-navbar-hover-color;
+@navbar-brand-font-size:                        @global-font-size;
+@navbar-brand-color:                            @global-contrast-color;
+@navbar-brand-hover-color:                      @global-contrast-color;
 
 @navbar-toggle-font-size:                       round((@global-font-size * 1.28)); // 18px / 20px
-@navbar-toggle-color:                           @global-navbar-color;
-@navbar-toggle-hover-color:                     @global-navbar-hover-color;
+@navbar-toggle-color:                           @global-contrast-color;
+@navbar-toggle-hover-color:                     @global-contrast-color;
 
 
 // Component
@@ -42,7 +43,7 @@
 // Sub-object: `uk-navbar-nav`
 // ========================================================================
 
-.hook-navbar-nav() {}
+.hook-navbar-nav() { text-transform: uppercase; }
 
 // Hover
 .hook-navbar-nav-hover() {}
@@ -66,5 +67,32 @@
 .hook-navbar-misc() {
 
     .uk-navbar-content > a:hover { text-decoration: none; }
+
+    /*
+     * `uk-navbar-brand`
+     */
+
+    .uk-navbar-brand {
+        position: relative;
+        line-height: @navbar-nav-height;
+        font-weight: 300;
+        text-transform: uppercase;
+    }
+
+    .uk-navbar-brand > * {
+    	line-height: @global-line-height;
+    	font-weight: normal;
+        text-transform: none;
+    }
+
+    .uk-navbar-brand:after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 50%;
+        height: 20px;
+        margin-top: -10px;
+        border-left: 1px solid rgba(255,255,255,0.6);;
+    }
 
 }
